--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/hibernate
-    username:
-    password:
+    username: postgres
+    password: 249
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
